<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="ST_UninitializedSetupFrame" Id="{a39ab8aa-5847-463e-95ec-ce992a28ea69}">
    <Declaration><![CDATA[TYPE ST_UninitializedSetupFrame :
STRUCT
	(* --- Communication setup --- *)
	(* MES *)
	sMesIpAddress 				: T_IPv4Addr;					(*  *)
	iMesPort					: UINT;							(*  *)
	
	(* Camera *)
	sCameraIpAddress			: T_IPv4Addr;					(*  *)
	iCameraPort					: UINT;							(*  *)
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>